# hello_world_cmake

./: CMakeLists.txt  LICENSE
include/helloworld/: hello_world.h
source/: hello_world.cpp
